--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,174 @@
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+
+@use "./general";
+
+// HEADER
+header {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(255, 95, 34);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    .top {
+        display: flex;
+        width: 80%;
+        justify-content: space-between;
+        height: 25px;
+        align-items: center;
+        max-width: 1000px;
+        ul {
+            margin: 0;
+            padding: 0;
+        }
+        .logo {
+            height: 25px;
+        }
+    }
+}
+// HEADER END
+
+// MAIN
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: start;
+    margin-top: 100px;
+    min-width: 776px;
+    height: 1074px;
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 80%;
+        max-width: 1000px;
+        margin: 0px auto;
+        .product {
+            position: relative;
+            flex-wrap: wrap;
+            width: 33%;
+            max-width: 254px;
+            height: 190%;
+            margin: 48px 1px;
+            cursor: pointer;
+            img {
+                max-height: 100%;
+                max-width: 100%;
+                position: absolute;
+            }
+            .img-hover {
+                display: none;
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+            &:hover {
+                .img-hover {
+                    display: block;
+                }
+            }
+            .disc-eco {
+                position: absolute;
+                top: 40%;
+                left: 0;
+                .discount {
+                    padding: 5px;
+                    color: white;
+                    background-color: red;
+                    font-size: 0.8rem;
+                }
+                .eco {
+                    padding: 5px;
+                    color: white;
+                    background-color: green;
+                    font-size: 0.8rem;
+                }
+            }
+            .heart {
+                position: absolute;
+                top: 10px;
+                right: 0;
+                padding: 10px;
+                background-color: white;
+                &:hover {
+                    color: red;
+                }
+            }
+            .info {
+                background-color: white;
+                position: absolute;
+                top: 60%;
+                text-align: center;
+                width: 100%;
+                height: 50px;
+                .brand {
+                    font-size: 0.8rem;
+                    color: rgb(150, 154, 150);
+                    display: block;
+                }
+                .desc {
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    display: block;
+                }
+                .price-new {
+                    font-size: 0.8rem;
+                    font-weight: bold;
+                    color: red;
+                }
+                .price-old {
+                    font-size: 0.8rem;
+                    text-decoration: line-through;
+                }
+            }
+        }
+    }
+}
+// MAIN END
+
+// FOOTER
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    height: 100px;
+    .footer-container {
+        display: flex;
+        font-size: 0.8rem;
+        width: 80%;
+        justify-content: space-between;
+        align-items: center;
+        .footer-left {
+            color: white;
+            strong {
+                margin-left: 5px;
+            }
+            ul {
+                padding-left: 0;
+                li {
+                    font-size: 0.6rem;
+                    list-style: none;
+                    margin-top: 10px;
+                }
+            }
+        }
+        .footer-right {
+            text-align: center;
+            color: white;
+            .logos {
+                li {
+                    color: white;
+                    margin: 10px 4px;
+                }
+            }
+        }
+    }
+}
+// FOOTER END
