--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -44,6 +44,7 @@ main {
         flex-wrap: wrap;
         justify-content: center;
         width: 80%;
+        gap: 10px;
         max-width: 1000px;
         margin: 0px auto;
         .product {
@@ -52,7 +53,7 @@ main {
             width: 33%;
             max-width: 254px;
             height: 190%;
-            margin: 48px 1px;
+            margin: 48px 5px;
             cursor: pointer;
             img {
                 max-height: 100%;
@@ -72,7 +73,7 @@ main {
             }
             .disc-eco {
                 position: absolute;
-                top: 40%;
+                top: 70%;
                 left: 0;
                 .discount {
                     padding: 5px;
@@ -100,7 +101,7 @@ main {
             .info {
                 background-color: white;
                 position: absolute;
-                top: 60%;
+                bottom: 0;
                 text-align: center;
                 width: 100%;
                 height: 50px;
